@@ -211,6 +211,9 @@
 /* Define to 1 if you have the <signal.h> header file. */
 #undef HAVE_SIGNAL_H
 
+/* Define to 1 if you have the `sigprocmask' function. */
+#undef HAVE_SIGPROCMASK
+
 /* Define if sigsetjmp is available. */
 #undef HAVE_SIGSETJMP
 
