@@ -1,6 +1,12 @@
 2019-10-18  Tom Tromey  <tom@tromey.com>
 
 	* configure: Rebuild.
+	* configure.ac: Don't check for sigprocmask.
+	* gdbsupport/common.m4 (GDB_AC_COMMON): Check for sigprocmask.
+
+2019-10-18  Tom Tromey  <tom@tromey.com>
+
+	* configure: Rebuild.
 	* acinclude.m4: Use m4_include, not sinclude.
 
 2019-10-18  Tom de Vries  <tdevries@suse.de>
